# scistack

./: .gitignore  readme.md
clhep/: Dockerfile
g4app/: Dockerfile
g4app/code/: CMakeLists.txt  g4simple.cc
g4env/: Dockerfile  note
geant4/: Dockerfile
mpich/: Dockerfile
root/: Dockerfile
